<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/grid_2"
        android:layout_marginVertical="@dimen/grid_1"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/intelligence"
            style="@style/TextBigNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:text="@string/intelligence" />

        <TextView
            android:id="@+id/intelligence_value"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/strength"
            style="@style/TextBigNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/strength" />

        <TextView
            android:id="@+id/strength_value"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/speed"
            style="@style/TextBigNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/speed_value"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/durability"
            style="@style/TextBigNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/durability" />

        <TextView
            android:id="@+id/durability_value"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/power"
            style="@style/TextBigNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/power" />

        <TextView
            android:id="@+id/power_value"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/combat"
            style="@style/TextBigNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/combat" />

        <TextView
            android:id="@+id/combat_value"
            style="@style/TextBigBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:layout_marginBottom="@dimen/grid_5" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>