<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/grid_1"
        android:layout_marginVertical="@dimen/grid_1"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/full_name"
            style="@style/TextMediumNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <TextView
            android:id="@+id/full_name_value"
            style="@style/TextMediumBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/aliases"
            style="@style/TextMediumNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/aliases" />

        <TextView
            android:id="@+id/aliases_value"
            style="@style/TextMediumBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <TextView
            android:id="@+id/place"
            style="@style/TextMediumNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:text="@string/place_of_birth" />

        <TextView
            android:id="@+id/place_value"
            style="@style/TextMediumBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_appearance"
                style="@style/TextMediumNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_appearance" />

            <TextView
                android:id="@+id/first_appearance_value"
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_0_5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/publisher"
                style="@style/TextMediumNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher" />

            <TextView
                android:id="@+id/publisher_value"
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_0_5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alignment"
                style="@style/TextMediumNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alignment" />

            <TextView
                android:id="@+id/alignment_value"
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_0_5" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>